# reproscreener

./: .gitattributes  .gitignore  404.html  CITATION.cff  CNAME  LICENSE  README.md  _quarto.yml  arxiv-miner.ipynb  explore.ipynb  find.ipynb  first.cast  index.html  julia.md  mkdocs.yml  objects.inv  pyproject.toml  references.bib  run.sh  test_arxivscraper.py  test_main.ipynb  tex2py.ipynb  z_client_secrets.json
.dvc/: config
02_manual_eval_explorer/: index.html
architecture/: index.html
case-studies/: index.html  julia.xml  manual_eval.csv
dev-notes/: index.html
development/: index.html
docs/: 01_manual_eval_explorer.py  02_manual_eval_explorer.py  02_manual_eval_explorer_rev.py  CNAME  architecture.md  case-studies.md  dev-notes.md  development.md  docstrings.md  evaluation_results.ipynb  funding.md  index.md  installation.md  license.md  manual_eval.csv  manual_eval_compare.ipynb  manual_evaluation_datasets.md  manual_evaluation_explorer.ipynb  metrics.md  references.bib  todo.md  usage.md  z_evaluation_results.ipynb  z_notes.md
docstrings/: index.html
evaluation_results/: index.html
explore/: scrape_id.csv  test_arxiv_api.py  test_main.ipynb  visualize.py
funding/: index.html
installation/: index.html
license/: index.html
manual_eval_compare/: index.html
manual_evaluation_datasets/: index.html
manual_evaluation_explorer/: index.html
notebooks/: 00_manual_eval_parser.ipynb  01_manual_eval_explorer.ipynb  01_manual_eval_explorer.py  02_manual_eval_explorer.py
pipeline/: find_regex.py  scrape_arxiv.py
plots/: repo_heatmap_df.csv  tex_heatmap_df.csv
scripts/: Makefile  export_manual_eval_tables.py
search/: search_index.json
src/: console.py  downloader.py  evaluate_guidance.py  find_regex.py  grobid_install.sh  guidance_json.py  keywords.py  main.py  r_logger.py  read_tex.py  repo_checker.py  repo_checker_rv2.py  repo_downloader.py  repo_eval.py  reproscreener.py  scrape_arxiv.py
tests/: download_arxiv_test.py  extract_links_pdf.ipynb  gold_standard_test.py  guidance_parse.ipynb  main.md  manual_eval.csv  repo_checker.ipynb  repo_eval_test.py  tex2py.ipynb  (+3 more)
(+961 files in other folders)
