[project]
name = "reproscreener"
version = "2.0.0"
description = "reproscreener"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "exrex>=0.12.0",
    "flashtext>=2.7",
    "gitpython>=3.1.44",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pydrive2>=1.21.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "typer>=0.15.4",
    "urlextract>=1.9.0",
]
