[project]
name = "reproscreener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adhithya Bhaskar", email = "adhithyabhaskar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "docling>=2.32.0",
    "exrex>=0.12.0",
    "feedparser>=6.0.11",
    "flashtext>=2.7",
    "gitpython>=3.1.44",
    "marimo>=0.13.15",
    "notebook>=7.4.2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "plotly>=6.1.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "urlextract>=1.9.0",
    "watchdog>=6.0.0",
]

[project.scripts]
reproscreener = "reproscreener:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
