[project]
name = "reproscreener"
version = "3.0.0"
description = "Automated reproducibility evaluation of research"
readme = "README.md"
authors = [
    { name = "Adhithya Bhaskar", email = "adhithyabhaskar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
]

[project.scripts]
reproscreener = "reproscreener.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "highlight-text>=0.2",
    "mkdocs>=1.6.1",
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-macros-plugin>=1.4.0",
    "mkdocs-material>=9.6.20",
    "mkdocstrings-python>=1.18.2",
    "notebook>=7.4.5",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "seaborn>=0.13.2",
]
